# milknado

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  justfile  milknado.toml  pyproject.toml
.claude/specs/: milknado-v0.1.md
.github/workflows/: ci.yml
integrations/: README.md
integrations/codex/: README.md  config.toml.example
integrations/cursor-milknado/: README.md  mcp.json
integrations/gemini-milknado/: README.md  gemini-extension.json
integrations/spec/: commands.yaml  generate_integrations.py
scripts/: mock_planner.py
src/milknado/: __init__.py  cli.py  mcp_server.py
tests/: conftest.py  test_adapters_crg.py  test_adapters_git.py  test_adapters_ralphify.py  test_agent_argv.py  test_cli.py  test_cli_plan.py  test_cli_pty_smoke.py  test_config.py  test_display.py  test_doctor.py  test_errors.py  test_execution.py  test_executor_duration.py  test_file_size_budget.py  test_graph.py  test_graph_persistence.py  test_graph_traversals.py  test_mcp_server.py  test_planner_coverage.py  test_planning.py  test_planning_batching_bridge.py  test_planning_budget.py  test_planning_context.py  test_planning_coverage.py  test_planning_mega_batch.py  test_planning_telemetry.py  test_plugin_scaffold.py  test_run_loop.py  test_run_loop_completion.py  test_run_loop_display.py  test_run_loop_input.py  test_run_loop_logging.py  test_run_loop_transcript.py  test_solver_mega_batch_guard.py  test_tilth_adapter.py  test_toolchain.py  test_touch_sites.py  test_transcript.py  test_weights_per_symbol.py
tests/adversarial/: test_bridge_chaos.py  test_cli_chaos.py  (+4 more)
(+80 files in other folders)
