[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "milknado"
version = "0.1.0"
description = "Mikado execution engine — decomposes goals into dependency graphs, executes as parallel ralph loops"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "ralphify @ git+https://github.com/paulnsorensen/ralphify@main",
    "code-review-graph>=2.3.2",
    "fastmcp>=2.14",
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    "ortools>=9.11",
    "tiktoken>=0.12",
]

[project.scripts]
milknado = "milknado.cli:app"
milknado-mcp = "milknado.mcp_server:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/milknado"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
    "ty>=0.0.1a1",
]
